--- a/css.css
+++ b/css.css
@@ -14,14 +14,14 @@ body {
     background-repeat: no-repeat;
 }
 
-header {
+#inicio {
     background-color: #282c34;
     color: white;
     padding: 20px;
     text-align: center;
 }
 
-header h1 {
+#inicio h1 {
     font-size: 2.5em;
 }
 
@@ -135,5 +135,13 @@ footer {
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     width: 500px;
+    text-align: center;
+}
+.voltar {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    width: 300px;
     text-align: center;
 }
